test/compile_fail/effect_state_set_without_context.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.state.set;
}
